--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "heroku-test",
   "version": "1.0.0",
   "description": "this is a test program to run a webpage on heroku",
-  "main": "mymdb.js",
+  "main": "mymdb_service.js",
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "client-sessions": "^0.8.0",
