--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"name": "CSC 337 Heroku test",
+	"name": "mymdb_service.js",
 	"description": "Testing Heroku with basic database query",
 	"repository": "https://github.com/CottageLord/CSC-337-Heroku-Test",
 	"logo": "https://rawgit.com/heroku/node-js-sample/master/public/node.svg"
